--- a/index.html
+++ b/index.html
@@ -17,15 +17,15 @@
     <div>
         <nav class="navbar navbar-default navigation-clean">
             <div class="container">
-                <div class="navbar-header"><a class="navbar-brand navbar-link" href="#">Greg Weiss</a>
+                <div class="navbar-header"><a class="navbar-brand navbar-link" href="../gregweiss1/index.html">Greg Weiss</a>
                     <button class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button>
                 </div>
                 <div class="collapse navbar-collapse" id="navcol-1">
                     <ul class="nav navbar-nav navbar-right">
-                        <li role="presentation"><a href="#">paintings</a></li>
-                        <li role="presentation"><a href="#">about</a></li>
-                        <li role="presentation"><a href="#">news</a></li>
-                        <li role="presentation"><a href="#">contact</a></li>
+                        <li role="presentation"><a href="../gregweiss1/paintings.html">paintings</a></li>
+                        <li role="presentation"><a href="../gregweiss1/about.html">about</a></li>
+                        <li role="presentation"><a href="../gregweiss1/news.html">news</a></li>
+                        <li role="presentation"><a href="../gregweiss1/contact.html">contact</a></li>
                     </ul>
                 </div>
             </div>
