Did it work this time?

--- a/contact.html
+++ b/contact.html
@@ -5,10 +5,10 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact: Greg Weiss</title>
-    <link rel="stylesheet" href="assets/css/fonts.css">
-    <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" href="assets/css/Navigation-Clean1.css">
-    <link rel="stylesheet" href="assets/css/styles.css">
+    <link rel="stylesheet" href=/Greg-Weiss/assets/css/fonts.css">
+    <link rel="stylesheet" href=/Greg-Weiss/assets/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href=/Greg-Weiss/assets/css/Navigation-Clean1.css">
+    <link rel="stylesheet" href=/Greg-Weiss/assets/css/styles.css">
     <script src="https://use.typekit.net/wis6fzu.js"></script>
     <script>try{Typekit.load({ async: true });}catch(e){}</script>
 </head>
@@ -102,8 +102,8 @@
             <p>Copyright 2016 Gregory S. Weiss</p>
             </div>
             </div>
-    <script src="assets/js/jquery.min.js"></script>
-    <script src="assets/bootstrap/js/bootstrap.min.js"></script>
+    <script src=/Greg-Weiss/assets/js/jquery.min.js"></script>
+    <script src=/Greg-Weiss/assets/bootstrap/js/bootstrap.min.js"></script>
 </body>
 
 </html>
