--- a/news.html
+++ b/news.html
@@ -5,10 +5,10 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>News: Greg Weiss</title>
-    <link rel="stylesheet" href="assets/css/fonts.css">
-    <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" href="assets/css/Navigation-Clean1.css">
-    <link rel="stylesheet" href="assets/css/styles.css">
+    <link rel="stylesheet" href=/Greg-Weiss/assets/css/fonts.css">
+    <link rel="stylesheet" href=/Greg-Weiss/assets/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href=/Greg-Weiss/assets/css/Navigation-Clean1.css">
+    <link rel="stylesheet" href=/Greg-Weiss/assets/css/styles.css">
     <script src="https://use.typekit.net/wis6fzu.js"></script>
     <script>try{Typekit.load({ async: true });}catch(e){}</script>
 </head>
@@ -37,59 +37,59 @@
                     <h1>News</h1>
                     <h4>November 2016</h4>
                     <h3>My painting Peace and Happiness will be featured in the Katonah Museum Artists’ Association All Member Show at the Katonah Village Library. The exhibit runs from November 2nd through December 29th. Please stop by!</h3>
-                     <div class="newsimage"><img src="assets/img/news/PEACE-AND-HAPPINESS-WEBSITE.jpg" alt="Peace and Happiness Greg Weiss" class="img-responsive center-block"></div>
+                     <div class="newsimage"><img src=/Greg-Weiss/assets/img/news/PEACE-AND-HAPPINESS-WEBSITE.jpg" alt="Peace and Happiness Greg Weiss" class="img-responsive center-block"></div>
         </div>
         </div>
         <div class="row">
         <div class="col-md-12">
                     <h4>July 2016</h4>
                     <h3>I published my first art book, <span class="title">Energy is All Around: Paintings and Personal Reflections</span>. This work is the outcome of a five-year exploration of movement, and includes 16 paintings with accompanying prose. Thanks to Duggal Visual Solutions for beautifully designing and printing the book.</h3>
-                     <div class="newsimage"><img src="assets/img/news/362519_GregWeiss_Book_low-res_v8.jpg" alt="Energy is All Around Book Cover Greg Weiss" class="img-responsive center-block"></div>
+                     <div class="newsimage"><img src=/Greg-Weiss/assets/img/news/362519_GregWeiss_Book_low-res_v8.jpg" alt="Energy is All Around Book Cover Greg Weiss" class="img-responsive center-block"></div>
         </div>
         </div>
         <div class="row">
         <div class="col-md-12">
                     <h4>January 2016</h4>
                     <h3>Two of my paintings, Leap of Faith and Red Tango, will be featured in a year-long exhibition at Northern Westchester Hospital (NWH) that marks the 100th anniversary of the hospital. I am thrilled and honored to be part of this special celebration for NWH, the place where my daughter was born last May.</h3>
-                    <div class="newsimage"><img src="assets/img/news/Jumper.jpg" alt="Leap of Faith Greg Weiss" class="img-responsive center-block">
-                    <img src="assets/img/news/Tango-600.png" alt="Red Tango Greg Weiss" class="img-responsive center-block"></div>
+                    <div class="newsimage"><img src=/Greg-Weiss/assets/img/news/Jumper.jpg" alt="Leap of Faith Greg Weiss" class="img-responsive center-block">
+                    <img src=/Greg-Weiss/assets/img/news/Tango-600.png" alt="Red Tango Greg Weiss" class="img-responsive center-block"></div>
         </div>
         </div>
         <div class="row">
         <div class="col-md-12">
                     <h4>November 2015</h4>
                     <h3>A framed print of In the Groove will be featured in the Katonah Museum Artists’ Association All Member Show at the Katonah Village Library. The exhibit runs from November 7th through December 2nd. Please stop by!</h3>
-                    <div class="newsimage"><img src="assets/img/news/Cropped-NewSaxMan.jpg" alt="In The Groove Greg Weiss" class="img-responsive center-block"></div>
+                    <div class="newsimage"><img src=/Greg-Weiss/assets/img/news/Cropped-NewSaxMan.jpg" alt="In The Groove Greg Weiss" class="img-responsive center-block"></div>
         </div>
         </div>
         <div class="row">
         <div class="col-md-12">
                     <h4>April 2015</h4>
                     <h3>The Kissers will be featured in “Close to the Edge,” a juried exhibition at the Pound Ridge Library (Exhibit Flyer) in Pound Ridge, NY. The exhibit runs from April 11th to May 14th. If you are in the area, come check it out!</h3>
-                    <div class="newsimage"><img src="assets/img/news/Kissers.jpg" alt="Kissers Greg Weiss" class="img-responsive center-block"></div>
+                    <div class="newsimage"><img src=/Greg-Weiss/assets/img/news/Kissers.jpg" alt="Kissers Greg Weiss" class="img-responsive center-block"></div>
         </div>
         </div>
         <div class="row">
         <div class="col-md-12">
                     <h4>March 2015</h4>
                     <h3>Two of my paintings, the Runners and Times Square, are now on display at the Northern Westchester Hospital Show. The exhibit highlights local artists and runs from March 2015 to December 2015. I am so pleased and honored to be able to brighten NWH with these paintings.</h3>
-                    <div class="newsimage"><img src="assets/img/news/Runners-smaller-file.jpg" alt="Runners Greg Weiss" class="img-responsive center-block"></div>
-                    <div class="newsimage"><img src="assets/img/news/Times-Square.jpg" alt="Times Square Greg Weiss" class="img-responsive center-block"></div>
+                    <div class="newsimage"><img src=/Greg-Weiss/assets/img/news/Runners-smaller-file.jpg" alt="Runners Greg Weiss" class="img-responsive center-block"></div>
+                    <div class="newsimage"><img src=/Greg-Weiss/assets/img/news/Times-Square.jpg" alt="Times Square Greg Weiss" class="img-responsive center-block"></div>
         </div>
         </div>
         <div class="row">
         <div class="col-md-12">
                     <h4>February 2015</h4>
                     <h3>Framed prints of my artwork are now available for purchase at Westchester House & Home in Mt. Kisco, New York. Please check out their website at <a href="www.westchesterhouseandhome.com.">www.westchesterhousenadhome.com</a></h3>
-                    <div class="newsimage"><img src="assets/img/news/WHHLOGO.jpg" alt="Westchester House and Home Logo" class="img-responsive center-block"></div>
+                    <div class="newsimage"><img src=/Greg-Weiss/assets/img/news/WHHLOGO.jpg" alt="Westchester House and Home Logo" class="img-responsive center-block"></div>
         </div>
         </div>
         <div class="row">
         <div class="col-md-12">
                     <h4>January 2015</h4>
                     <h3>Large-scale prints of my fitness inspired paintings are now on display in New York City at Synergy Fitness (138 West 14th Street) and the McBurney YMCA (125 West 14th Street). Come visit, feel the pump and enjoy the art!</h3>
-                    <div class="newsimage"><img src="assets/img/news/YMCA-GymWall-900.png" alt="Greg Weiss paintings at YMCA" class="img-responsive center-block"></div>
-                    <div class="newsimage"><img src="assets/img/news/Synergy-Photo-ReTouched.png" alt="Greg Weiss at Synergy Fitness in front of his painting" class="img-responsive center-block"></div>
+                    <div class="newsimage"><img src=/Greg-Weiss/assets/img/news/YMCA-GymWall-900.png" alt="Greg Weiss paintings at YMCA" class="img-responsive center-block"></div>
+                    <div class="newsimage"><img src=/Greg-Weiss/assets/img/news/Synergy-Photo-ReTouched.png" alt="Greg Weiss at Synergy Fitness in front of his painting" class="img-responsive center-block"></div>
         </div>
         </div>
 <div class="footer">
@@ -97,8 +97,8 @@
             <p>Copyright 2016 Gregory S. Weiss</p>
             </div>
             </div>
-    <script src="assets/js/jquery.min.js"></script>
-    <script src="assets/bootstrap/js/bootstrap.min.js"></script>
+    <script src=/Greg-Weiss/assets/js/jquery.min.js"></script>
+    <script src=/Greg-Weiss/assets/bootstrap/js/bootstrap.min.js"></script>
 </body>
 
 </html>
