--- a/about.html
+++ b/about.html
@@ -5,10 +5,10 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About: Greg Weiss</title>
-    <link rel="stylesheet" href="assets/css/fonts.css">
-    <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" href="assets/css/Navigation-Clean1.css">
-    <link rel="stylesheet" href="assets/css/styles.css">
+    <link rel="stylesheet" href=/Greg-Weiss/assets/css/fonts.css">
+    <link rel="stylesheet" href=/Greg-Weiss/assets/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href=/Greg-Weiss/assets/css/Navigation-Clean1.css">
+    <link rel="stylesheet" href=/Greg-Weiss/assets/css/styles.css">
     <script src="https://use.typekit.net/wis6fzu.js"></script>
     <script>try{Typekit.load({ async: true });}catch(e){}</script>
 </head>
@@ -35,15 +35,15 @@
        <div class="row">
        <div class="col-md-12">
                            <h1>About The Artist</h1>
- <div class="aboutimage"><img src="assets/img/about-greg-weiss.jpg" alt="About Greg Weiss" class="img-responsive center-block"></div>
+ <div class="aboutimage"><img src=/Greg-Weiss/assets/img/about-greg-weiss.jpg" alt="About Greg Weiss" class="img-responsive center-block"></div>
                     <h3>Greg Weiss creates bold and energetic paintings. He is interested in images that convey movement, intensity, excitement and positive energy. A member of the Katonah Museum Artists’ Association, Greg regularly exhibits his art in Northern Westchester. Greg lives in Bedford Hills, New York with his wife, daughter, one dog and two cats.</h3>
 <div class="footer">
             <div class="col-md-12">
             <p>Copyright 2016 Gregory S. Weiss</p>
             </div>
             </div>
-    <script src="assets/js/jquery.min.js"></script>
-    <script src="assets/bootstrap/js/bootstrap.min.js"></script>
+    <script src=/Greg-Weiss/assets/js/jquery.min.js"></script>
+    <script src=/Greg-Weiss/assets/bootstrap/js/bootstrap.min.js"></script>
 </body>
 
 </html>
