--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Greg Weiss Art</title>
-    <link rel="stylesheet" href=/Greg-Weiss/assets/css/fonts.css">
-    <link rel="stylesheet" href=/Greg-Weiss/assets/bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" href=/Greg-Weiss/assets/css/Navigation-Clean1.css">
-    <link rel="stylesheet" href=/Greg-Weiss/assets/css/styles.css">
+    <link rel="stylesheet" href="assets/css/fonts.css">
+    <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="assets/css/Navigation-Clean1.css">
+    <link rel="stylesheet" href="assets/css/styles.css">
     <script src="https://use.typekit.net/wis6fzu.js"></script>
     <script>try{Typekit.load({ async: true });}catch(e){}</script>
 </head>
@@ -17,23 +17,23 @@
     <div>
         <nav class="navbar navbar-default navigation-clean">
             <div class="container">
-                <div class="navbar-header"><a class="navbar-brand navbar-link" href="/Greg-Weiss/index.html">Greg Weiss</a>
+                <div class="navbar-header"><a class="navbar-brand navbar-link" href="../gregweiss1/index.html">Greg Weiss</a>
                     <button class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button>
                 </div>
                 <div class="collapse navbar-collapse" id="navcol-1">
                     <ul class="nav navbar-nav navbar-right">
-                        <li role="presentation"><a href="/Greg-Weiss/paintings.html">paintings</a></li>
-                        <li role="presentation"><a href="/Greg-Weiss/about.html">about</a></li>
-                        <li role="presentation"><a href="/Greg-Weiss/news.html">news</a></li>
-                        <li role="presentation"><a href="/Greg-Weiss/contact.html">contact</a></li>
+                        <li role="presentation"><a href="../gregweiss1/paintings.html">paintings</a></li>
+                        <li role="presentation"><a href="../gregweiss1/about.html">about</a></li>
+                        <li role="presentation"><a href="../gregweiss1/news.html">news</a></li>
+                        <li role="presentation"><a href="../gregweiss1/contact.html">contact</a></li>
                     </ul>
                 </div>
             </div>
         </nav>
     </div>
     <div class="fullbleed"></div>
-    <script src=/Greg-Weiss/assets/js/jquery.min.js"></script>
-    <script src=/Greg-Weiss/assets/bootstrap/js/bootstrap.min.js"></script>
+    <script src="assets/js/jquery.min.js"></script>
+    <script src="assets/bootstrap/js/bootstrap.min.js"></script>
 </body>
 
 </html>
