--- a/paintings.html
+++ b/paintings.html
@@ -5,10 +5,10 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Paintings: Greg Weiss</title>
-    <link rel="stylesheet" href=/Greg-Weiss/assets/css/fonts.css">
-    <link rel="stylesheet" href=/Greg-Weiss/assets/bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" href=/Greg-Weiss/assets/css/Navigation-Clean1.css">
-    <link rel="stylesheet" href=/Greg-Weiss/assets/css/styles.css">
+    <link rel="stylesheet" href="assets/css/fonts.css">
+    <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="assets/css/Navigation-Clean1.css">
+    <link rel="stylesheet" href="assets/css/styles.css">
     <script src="https://use.typekit.net/wis6fzu.js"></script>
     <script>try{Typekit.load({ async: true });}catch(e){}</script>
 </head>
@@ -17,15 +17,15 @@
     <div>
         <nav class="navbar navbar-default navigation-clean">
             <div class="container">
-                <div class="navbar-header"><a class="navbar-brand navbar-link" href="/Greg-Weiss/index.html">Greg Weiss</a>
+                <div class="navbar-header"><a class="navbar-brand navbar-link" href="../gregweiss1/index.html">Greg Weiss</a>
                     <button class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button>
                 </div>
                 <div class="collapse navbar-collapse" id="navcol-1">
                     <ul class="nav navbar-nav navbar-right">
-                        <li role="presentation"><a href="/Greg-Weiss/paintings.html">paintings</a></li>
-                        <li role="presentation"><a href="/Greg-Weiss/about.html">about</a></li>
-                        <li role="presentation"><a href="/Greg-Weiss/news.html">news</a></li>
-                        <li role="presentation"><a href="/Greg-Weiss/contact.html">contact</a></li>
+                        <li role="presentation"><a href="../gregweiss1/paintings.html">paintings</a></li>
+                        <li role="presentation"><a href="../gregweiss1/about.html">about</a></li>
+                        <li role="presentation"><a href="../gregweiss1/news.html">news</a></li>
+                        <li role="presentation"><a href="../gregweiss1/contact.html">contact</a></li>
                     </ul>
                 </div>
             </div>
@@ -36,98 +36,98 @@
  <div class="row">
 
             <div class="col-lg-3 col-md-4 col-xs-6 thumb">
-                <a class="thumbnail" href="/Greg-Weiss/conductor.html">
-                    <img class="img-responsive" src="/Greg-Weiss/assets/img/thumbnails/conductor.jpg" alt="Conductor Greg Weiss">
+                <a class="thumbnail" href="../gregweiss1/conductor.html">
+                    <img class="img-responsive" src="../gregweiss1/assets/img/thumbnails/conductor.jpg" alt="Conductor Greg Weiss">
                 </a>
             </div>
             <div class="col-lg-3 col-md-4 col-xs-6 thumb">
                 <a class="thumbnail" href="#">
-                    <img class="img-responsive" src="/Greg-Weiss/assets/img/thumbnails/diver.jpg" alt="Diver Greg Weiss">
+                    <img class="img-responsive" src="../gregweiss1/assets/img/thumbnails/diver.jpg" alt="Diver Greg Weiss">
                 </a>
             </div>
             <div class="col-lg-3 col-md-4 col-xs-6 thumb">
                 <a class="thumbnail" href="#">
-                    <img class="img-responsive" src="/Greg-Weiss/assets/img/thumbnails/leap-of-faith.jpg" alt="Leap of Faith Greg Weiss">
+                    <img class="img-responsive" src="../gregweiss1/assets/img/thumbnails/leap-of-faith.jpg" alt="Leap of Faith Greg Weiss">
                 </a>
             </div>
             <div class="col-lg-3 col-md-4 col-xs-6 thumb">
                 <a class="thumbnail" href="#">
-                    <img class="img-responsive" src="/Greg-Weiss/assets/img/thumbnails/kissers.jpg" alt="Kissers Greg Weiss">
+                    <img class="img-responsive" src="../gregweiss1/assets/img/thumbnails/kissers.jpg" alt="Kissers Greg Weiss">
                 </a>
             </div>
             <div class="col-lg-3 col-md-4 col-xs-6 thumb">
                 <a class="thumbnail" href="#">
-                    <img class="img-responsive" src="/Greg-Weiss/assets/img/thumbnails/runners.jpg" alt="">
+                    <img class="img-responsive" src="../gregweiss1/assets/img/thumbnails/runners.jpg" alt="">
                 </a>
             </div>
             <div class="col-lg-3 col-md-4 col-xs-6 thumb">
                 <a class="thumbnail" href="#">
-                    <img class="img-responsive" src="/Greg-Weiss/assets/img/thumbnails/3-blondes.jpg" alt="">
+                    <img class="img-responsive" src="../gregweiss1/assets/img/thumbnails/3-blondes.jpg" alt="">
                 </a>
             </div>
             <div class="col-lg-3 col-md-4 col-xs-6 thumb">
                 <a class="thumbnail" href="#">
-                    <img class="img-responsive" src="/Greg-Weiss/assets/img/thumbnails/rock-star.jpg" alt="">
+                    <img class="img-responsive" src="../gregweiss1/assets/img/thumbnails/rock-star.jpg" alt="">
                 </a>
             </div>
             <div class="col-lg-3 col-md-4 col-xs-6 thumb">
                 <a class="thumbnail" href="#">
-                    <img class="img-responsive" src="/Greg-Weiss/assets/img/thumbnails/in-the-groove.jpg" alt="">
+                    <img class="img-responsive" src="../gregweiss1/assets/img/thumbnails/in-the-groove.jpg" alt="">
                 </a>
             </div>
             <div class="col-lg-3 col-md-4 col-xs-6 thumb">
                 <a class="thumbnail" href="#">
-                    <img class="img-responsive" src="/Greg-Weiss/assets/img/thumbnails/2-blondes.jpg" alt="">
+                    <img class="img-responsive" src="../gregweiss1/assets/img/thumbnails/2-blondes.jpg" alt="">
                 </a>
             </div>
             <div class="col-lg-3 col-md-4 col-xs-6 thumb">
                 <a class="thumbnail" href="#">
-                    <img class="img-responsive" src="/Greg-Weiss/assets/img/thumbnails/biker.jpg" alt="">
+                    <img class="img-responsive" src="../gregweiss1/assets/img/thumbnails/biker.jpg" alt="">
                 </a>
             </div>
             <div class="col-lg-3 col-md-4 col-xs-6 thumb">
                 <a class="thumbnail" href="#">
-                    <img class="img-responsive" src="/Greg-Weiss/assets/img/thumbnails/times-square.jpg" alt="">
+                    <img class="img-responsive" src="../gregweiss1/assets/img/thumbnails/times-square.jpg" alt="">
                 </a>
             </div>
             <div class="col-lg-3 col-md-4 col-xs-6 thumb">
                 <a class="thumbnail" href="#">
-                    <img class="img-responsive" src="/Greg-Weiss/assets/img/thumbnails/skier.jpg" alt="">
+                    <img class="img-responsive" src="../gregweiss1/assets/img/thumbnails/skier.jpg" alt="">
                 </a>
             </div>
                    <div class="col-lg-3 col-md-4 col-xs-6 thumb">
                 <a class="thumbnail" href="#">
-                    <img class="img-responsive" src="/Greg-Weiss/assets/img/thumbnails/polo.jpg" alt="">
+                    <img class="img-responsive" src="../gregweiss1/assets/img/thumbnails/polo.jpg" alt="">
                 </a>
             </div>
             <div class="col-lg-3 col-md-4 col-xs-6 thumb">
                 <a class="thumbnail" href="#">
-                    <img class="img-responsive" src="/Greg-Weiss/assets/img/thumbnails/protesters.jpg" alt="">
+                    <img class="img-responsive" src="../gregweiss1/assets/img/thumbnails/protesters.jpg" alt="">
                 </a>
             </div>
             <div class="col-lg-3 col-md-4 col-xs-6 thumb">
                 <a class="thumbnail" href="#">
-                    <img class="img-responsive" src="/Greg-Weiss/assets/img/thumbnails/embrace.jpg" alt="">
+                    <img class="img-responsive" src="../gregweiss1/assets/img/thumbnails/embrace.jpg" alt="">
                 </a>
             </div>
             <div class="col-lg-3 col-md-4 col-xs-6 thumb">
                 <a class="thumbnail" href="#">
-                    <img class="img-responsive" src="/Greg-Weiss/assets/img/thumbnails/red-tango.jpg" alt="">
+                    <img class="img-responsive" src="../gregweiss1/assets/img/thumbnails/red-tango.jpg" alt="">
                 </a>
             </div>
                    <div class="col-lg-3 col-md-4 col-xs-6 thumb">
                 <a class="thumbnail" href="#">
-                    <img class="img-responsive" src="/Greg-Weiss/assets/img/thumbnails/sprint.jpg" alt="">
+                    <img class="img-responsive" src="../gregweiss1/assets/img/thumbnails/sprint.jpg" alt="">
                 </a>
             </div>
             <div class="col-lg-3 col-md-4 col-xs-6 thumb">
                 <a class="thumbnail" href="#">
-                    <img class="img-responsive" src="/Greg-Weiss/assets/img/thumbnails/peace-and-happiness.jpg" alt="">
+                    <img class="img-responsive" src="../gregweiss1/assets/img/thumbnails/peace-and-happiness.jpg" alt="">
                 </a>
             </div>
             <div class="col-lg-3 col-md-4 col-xs-6 thumb">
                 <a class="thumbnail" href="#">
-                    <img class="img-responsive" src="/Greg-Weiss/assets/img/thumbnails/waterfall.jpg" alt="">
+                    <img class="img-responsive" src="../gregweiss1/assets/img/thumbnails/waterfall.jpg" alt="">
                 </a>
             </div>
         </div>
@@ -140,8 +140,8 @@
             </div>
             </div>
             </div>
-    <script src=/Greg-Weiss/assets/js/jquery.min.js"></script>
-    <script src=/Greg-Weiss/assets/bootstrap/js/bootstrap.min.js"></script>
+    <script src="assets/js/jquery.min.js"></script>
+    <script src="assets/bootstrap/js/bootstrap.min.js"></script>
 </body>
 
 </html>
