I think I got it!

--- a/paintings.html
+++ b/paintings.html
@@ -17,15 +17,15 @@
     <div>
         <nav class="navbar navbar-default navigation-clean">
             <div class="container">
-                <div class="navbar-header"><a class="navbar-brand navbar-link" href="../gregweiss1/index.html">Greg Weiss</a>
+                <div class="navbar-header"><a class="navbar-brand navbar-link" href="index.html">Greg Weiss</a>
                     <button class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button>
                 </div>
                 <div class="collapse navbar-collapse" id="navcol-1">
                     <ul class="nav navbar-nav navbar-right">
-                        <li role="presentation"><a href="../gregweiss1/paintings.html">paintings</a></li>
-                        <li role="presentation"><a href="../gregweiss1/about.html">about</a></li>
-                        <li role="presentation"><a href="../gregweiss1/news.html">news</a></li>
-                        <li role="presentation"><a href="../gregweiss1/contact.html">contact</a></li>
+                        <li role="presentation"><a href="paintings.html">paintings</a></li>
+                        <li role="presentation"><a href="about.html">about</a></li>
+                        <li role="presentation"><a href="news.html">news</a></li>
+                        <li role="presentation"><a href="contact.html">contact</a></li>
                     </ul>
                 </div>
             </div>
@@ -36,98 +36,98 @@
  <div class="row">
 
             <div class="col-lg-3 col-md-4 col-xs-6 thumb">
-                <a class="thumbnail" href="../gregweiss1/conductor.html">
-                    <img class="img-responsive" src="../gregweiss1/assets/img/thumbnails/conductor.jpg" alt="Conductor Greg Weiss">
+                <a class="thumbnail" href="conductor.html">
+                    <img class="img-responsive" src="assets/img/thumbnails/conductor.jpg" alt="Conductor Greg Weiss">
                 </a>
             </div>
             <div class="col-lg-3 col-md-4 col-xs-6 thumb">
                 <a class="thumbnail" href="#">
-                    <img class="img-responsive" src="../gregweiss1/assets/img/thumbnails/diver.jpg" alt="Diver Greg Weiss">
+                    <img class="img-responsive" src="assets/img/thumbnails/diver.jpg" alt="Diver Greg Weiss">
                 </a>
             </div>
             <div class="col-lg-3 col-md-4 col-xs-6 thumb">
                 <a class="thumbnail" href="#">
-                    <img class="img-responsive" src="../gregweiss1/assets/img/thumbnails/leap-of-faith.jpg" alt="Leap of Faith Greg Weiss">
+                    <img class="img-responsive" src="assets/img/thumbnails/leap-of-faith.jpg" alt="Leap of Faith Greg Weiss">
                 </a>
             </div>
             <div class="col-lg-3 col-md-4 col-xs-6 thumb">
                 <a class="thumbnail" href="#">
-                    <img class="img-responsive" src="../gregweiss1/assets/img/thumbnails/kissers.jpg" alt="Kissers Greg Weiss">
+                    <img class="img-responsive" src="assets/img/thumbnails/kissers.jpg" alt="Kissers Greg Weiss">
                 </a>
             </div>
             <div class="col-lg-3 col-md-4 col-xs-6 thumb">
                 <a class="thumbnail" href="#">
-                    <img class="img-responsive" src="../gregweiss1/assets/img/thumbnails/runners.jpg" alt="">
+                    <img class="img-responsive" src="assets/img/thumbnails/runners.jpg" alt="">
                 </a>
             </div>
             <div class="col-lg-3 col-md-4 col-xs-6 thumb">
                 <a class="thumbnail" href="#">
-                    <img class="img-responsive" src="../gregweiss1/assets/img/thumbnails/3-blondes.jpg" alt="">
+                    <img class="img-responsive" src="assets/img/thumbnails/3-blondes.jpg" alt="">
                 </a>
             </div>
             <div class="col-lg-3 col-md-4 col-xs-6 thumb">
                 <a class="thumbnail" href="#">
-                    <img class="img-responsive" src="../gregweiss1/assets/img/thumbnails/rock-star.jpg" alt="">
+                    <img class="img-responsive" src="assets/img/thumbnails/rock-star.jpg" alt="">
                 </a>
             </div>
             <div class="col-lg-3 col-md-4 col-xs-6 thumb">
                 <a class="thumbnail" href="#">
-                    <img class="img-responsive" src="../gregweiss1/assets/img/thumbnails/in-the-groove.jpg" alt="">
+                    <img class="img-responsive" src="assets/img/thumbnails/in-the-groove.jpg" alt="">
                 </a>
             </div>
             <div class="col-lg-3 col-md-4 col-xs-6 thumb">
                 <a class="thumbnail" href="#">
-                    <img class="img-responsive" src="../gregweiss1/assets/img/thumbnails/2-blondes.jpg" alt="">
+                    <img class="img-responsive" src="assets/img/thumbnails/2-blondes.jpg" alt="">
                 </a>
             </div>
             <div class="col-lg-3 col-md-4 col-xs-6 thumb">
                 <a class="thumbnail" href="#">
-                    <img class="img-responsive" src="../gregweiss1/assets/img/thumbnails/biker.jpg" alt="">
+                    <img class="img-responsive" src="assets/img/thumbnails/biker.jpg" alt="">
                 </a>
             </div>
             <div class="col-lg-3 col-md-4 col-xs-6 thumb">
                 <a class="thumbnail" href="#">
-                    <img class="img-responsive" src="../gregweiss1/assets/img/thumbnails/times-square.jpg" alt="">
+                    <img class="img-responsive" src="assets/img/thumbnails/times-square.jpg" alt="">
                 </a>
             </div>
             <div class="col-lg-3 col-md-4 col-xs-6 thumb">
                 <a class="thumbnail" href="#">
-                    <img class="img-responsive" src="../gregweiss1/assets/img/thumbnails/skier.jpg" alt="">
+                    <img class="img-responsive" src="assets/img/thumbnails/skier.jpg" alt="">
                 </a>
             </div>
                    <div class="col-lg-3 col-md-4 col-xs-6 thumb">
                 <a class="thumbnail" href="#">
-                    <img class="img-responsive" src="../gregweiss1/assets/img/thumbnails/polo.jpg" alt="">
+                    <img class="img-responsive" src="assets/img/thumbnails/polo.jpg" alt="">
                 </a>
             </div>
             <div class="col-lg-3 col-md-4 col-xs-6 thumb">
                 <a class="thumbnail" href="#">
-                    <img class="img-responsive" src="../gregweiss1/assets/img/thumbnails/protesters.jpg" alt="">
+                    <img class="img-responsive" src="assets/img/thumbnails/protesters.jpg" alt="">
                 </a>
             </div>
             <div class="col-lg-3 col-md-4 col-xs-6 thumb">
                 <a class="thumbnail" href="#">
-                    <img class="img-responsive" src="../gregweiss1/assets/img/thumbnails/embrace.jpg" alt="">
+                    <img class="img-responsive" src="assets/img/thumbnails/embrace.jpg" alt="">
                 </a>
             </div>
             <div class="col-lg-3 col-md-4 col-xs-6 thumb">
                 <a class="thumbnail" href="#">
-                    <img class="img-responsive" src="../gregweiss1/assets/img/thumbnails/red-tango.jpg" alt="">
+                    <img class="img-responsive" src="assets/img/thumbnails/red-tango.jpg" alt="">
                 </a>
             </div>
                    <div class="col-lg-3 col-md-4 col-xs-6 thumb">
                 <a class="thumbnail" href="#">
-                    <img class="img-responsive" src="../gregweiss1/assets/img/thumbnails/sprint.jpg" alt="">
+                    <img class="img-responsive" src="assets/img/thumbnails/sprint.jpg" alt="">
                 </a>
             </div>
             <div class="col-lg-3 col-md-4 col-xs-6 thumb">
                 <a class="thumbnail" href="#">
-                    <img class="img-responsive" src="../gregweiss1/assets/img/thumbnails/peace-and-happiness.jpg" alt="">
+                    <img class="img-responsive" src="assets/img/thumbnails/peace-and-happiness.jpg" alt="">
                 </a>
             </div>
             <div class="col-lg-3 col-md-4 col-xs-6 thumb">
                 <a class="thumbnail" href="#">
-                    <img class="img-responsive" src="../gregweiss1/assets/img/thumbnails/waterfall.jpg" alt="">
+                    <img class="img-responsive" src="assets/img/thumbnails/waterfall.jpg" alt="">
                 </a>
             </div>
         </div>
