--- a/conductor.html
+++ b/conductor.html
@@ -10,47 +10,61 @@
     <link rel="stylesheet" href="assets/css/Navigation-Clean1.css">
     <link rel="stylesheet" href="assets/css/styles.css">
     <script src="https://use.typekit.net/wis6fzu.js"></script>
-    <script>try{Typekit.load({ async: true });}catch(e){}</script>
+    <script>try {
+        Typekit.load({async: true});
+    } catch (e) {
+    }</script>
 </head>
 
 <body>
-    <div>
-        <nav class="navbar navbar-default navigation-clean">
-            <div class="container">
-                <div class="navbar-header"><a class="navbar-brand navbar-link" href="index.html">Greg Weiss</a>
-                    <button class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button>
-                </div>
-                <div class="collapse navbar-collapse" id="navcol-1">
-                    <ul class="nav navbar-nav navbar-right">
-                        <li role="presentation"><a href="paintings.html">paintings</a></li>
-                        <li role="presentation"><a href="about.html">about</a></li>
-                        <li role="presentation"><a href="news.html">news</a></li>
-                        <li role="presentation"><a href="contact.html">contact</a></li>
-                    </ul>
-                </div>
+<div>
+    <nav class="navbar navbar-default navigation-clean">
+        <div class="container">
+            <div class="navbar-header"><a class="navbar-brand navbar-link" href="index.html">Greg Weiss</a>
+                <button class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navcol-1"><span
+                        class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span
+                        class="icon-bar"></span><span class="icon-bar"></span></button>
             </div>
-        </nav>
-    </div>
-        <div class="col-md-12">
-        <div class="row">
+            <div class="collapse navbar-collapse" id="navcol-1">
+                <ul class="nav navbar-nav navbar-right">
+                    <li role="presentation"><a href="paintings.html">paintings</a></li>
+                    <li role="presentation"><a href="about.html">about</a></li>
+                    <li role="presentation"><a href="news.html">news</a></li>
+                    <li role="presentation"><a href="contact.html">contact</a></li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+</div>
+<div class="col-md-12">
+    <div class="row">
         <div class="singleimage">
-        <img src="assets/img/paintings/conductor.jpg" alt="About Greg Weiss" class="img-responsive center-block">
-        <p><span class="title">Conductor</span>  /  2013  /  40 x 30 inches</p>
-        <ul class="right"><li><img src="assets/img/left.jpg"></li>
-        <li><img src="assets/img/thumbnails.jpg"></li>
-        <li><img src="assets/img/right.jpg"></li>
-        </ul>
+            <img src="assets/img/paintings/conductor.jpg" alt="About Greg Weiss" class="img-responsive center-block">
+        </div>
+    </div>
+    </div>
+<div class="col-md-12">
+    <div class="singleimage-controls row">
+        <div class="col-md-6">
+            <p><span class="title">Conductor</span> / 2013 / 40 x 30 inches</p>
+            </div>
+        <div class="col-md-6">
+            <ul>
+                <li><img src="assets/img/left.jpg"></li>
+                <li><img src="assets/img/thumbnails.jpg"></li>
+                <li><img src="assets/img/right.jpg"></li>
+            </ul>
         </div>
         </div>
-        </div>
+</div>
 
 <div class="footer">
-            <div class="col-md-12">
-            <p>Copyright 2016 Gregory S. Weiss</p>
-            </div>
-            </div>
-    <script src="assets/js/jquery.min.js"></script>
-    <script src="assets/bootstrap/js/bootstrap.min.js"></script>
+    <div class="col-md-12">
+        <p>Copyright 2016 Gregory S. Weiss</p>
+    </div>
+</div>
+<script src="assets/js/jquery.min.js"></script>
+<script src="assets/bootstrap/js/bootstrap.min.js"></script>
 </body>
 
 </html>
