--- a/news.html
+++ b/news.html
@@ -44,7 +44,7 @@
         <div class="col-md-12">
                     <h4>July 2016</h4>
                     <h3>I published my first art book, <span class="title">Energy is All Around: Paintings and Personal Reflections</span>. This work is the outcome of a five-year exploration of movement, and includes 16 paintings with accompanying prose. Thanks to Duggal Visual Solutions for beautifully designing and printing the book.</h3>
-                     <div class="newsimage"><img src="assets/img/news/362519_GregWeiss_Book_low-res_v8.jpg" alt="Energy is All Around Book Cover Greg Weiss" class="img-responsive center-block"></div>
+                     <div class="newsimage"><span style="border 1px solid #000"><img src="assets/img/news/362519_GregWeiss_Book_low-res_v8.jpg" alt="Energy is All Around Book Cover Greg Weiss" class="img-responsive center-block"></span></div>
         </div>
         </div>
         <div class="row">
